--- a/Codes_and_Weights/Train_Transformer_LSTM_with_SS_without_Contact_Map.ipynb
+++ b/Codes_and_Weights/Train_Transformer_LSTM_with_SS_without_Contact_Map.ipynb
@@ -120,7 +120,7 @@
         "with open(\"dataset.fasta\", \"w\") as f:\n",
         "    for i in range(data.shape[0]):\n",
         "        f.write(\">\"+data.loc[i, \"name\"]+\"\\n\")\n",
-        "        f.write(data.loc[i, \"sequence\"]+\"\\n\""
+        "        f.write(data.loc[i, \"sequence\"]+\"\\n\")"
       ],
       "execution_count": null,
       "outputs": []
