--- a/Codes_and_Weights/Train_Transformer_LSTM_without_SS_without_Contact_Map.ipynb
+++ b/Codes_and_Weights/Train_Transformer_LSTM_without_SS_without_Contact_Map.ipynb
@@ -103,7 +103,7 @@
         "data = pd.concat((data_mul, data_single), axis=0)\n",
         "data[\"name\"] = [\"protein\" + str(i) for i in range(data.shape[0])]\n",
         "\n",
-        "data = data.loc[:, [\"name\", \"secondary_structure\", \"stabilityscore\"]]\n",
+        "data = data.loc[:, [\"name\", \"sequence\", \"secondary_structure\", \"stabilityscore\"]]\n",
         "data.reset_index(drop=True, inplace=True)\n",
         "\n",
         "\n",
